--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -2,5 +2,6 @@
   "accentColor": "#715cdb",
   "monospaceFontFamily": "SF Mono",
   "theme": "obsidian",
-  "cssTheme": "Minimal"
+  "cssTheme": "Minimal",
+  "baseFontSize": 23
 }
