--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -2,7 +2,7 @@
   "accentColor": "#b09c63",
   "monospaceFontFamily": "SF Mono",
   "theme": "obsidian",
-  "cssTheme": "Obsidian gruvbox",
+  "cssTheme": "Things",
   "baseFontSize": 28,
   "textFontFamily": "Inter",
   "interfaceFontFamily": "SF Mono"
