--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,7 +5,7 @@
   "defaultViewMode": "source",
   "alwaysUpdateLinks": true,
   "pdfExportSettings": {
-    "includeName": false,
+    "includeName": true,
     "pageSize": "Letter",
     "landscape": false,
     "margin": "0",
